--- a/style.css
+++ b/style.css
@@ -1,15 +1,31 @@
-.main-nav {
-	display: flex;
-	list-style: none;
-	font-size: 2em;
+* {
 	margin: 0;
+	padding: 0;
 }
 
-li {
-	padding: 20px;
+body {
+	font-family: Arial, Helvetica, sans-serif;
+	background: #333;
+	color: #fff;
+	line-height: 1.6;
+	height: 100vh;
 }
 
-a {
-	color: #f5f5f6;
-	text-decoration: none;
+.container {
+	width: 100%;
+	height: 100%;
+}
+
+.navbar {
+	position: fixed;
+	top: 0;
+	z-index: 1;
+	display: flex;
+	width: 100%;
+	height: 60px;
+	background: rgba(0, 0, 0, 0.7);
+}
+
+.push {
+	margin-right: auto;
 }
