--- a/style.css
+++ b/style.css
@@ -26,6 +26,46 @@ body {
 	background: rgba(0, 0, 0, 0.7);
 }
 
+.navbar ul {
+	display: flex;
+	list-style: none;
+	width: 100%;
+	justify-content: center;
+}
+
+.navbar ul li {
+	margin: 0 1rem;
+	padding: 1rem;
+}
+
+.navbar ul li a {
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #f4f4f4;
+}
+
+.navbar ul li a:hover {
+	color: skyblue;
+}
+
+section {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	width: 100%;
+	height: 100vh;
+}
+
+section h1 {
+	font-size: 4rem;
+}
+
+section p {
+	font-size: 1.5rem;
+}
+
 .push {
 	margin-right: auto;
 }
