--- a/style.css
+++ b/style.css
@@ -9,11 +9,16 @@ body {
 	color: #fff;
 	line-height: 1.6;
 	height: 100vh;
+	overflow: hidden;
 }
 
 .container {
 	width: 100%;
 	height: 100%;
+	/* CSS Smooth Scroll */
+	overflow-y: scroll;
+	scroll-behavior: smooth;
+	-moz-scroll-snap-type: y mandatory;
 }
 
 .navbar {
@@ -56,6 +61,7 @@ section {
 	text-align: center;
 	width: 100%;
 	height: 100vh;
+	-moz-scroll-snap-align: center;
 }
 
 section h1 {
@@ -64,6 +70,32 @@ section h1 {
 
 section p {
 	font-size: 1.5rem;
+}
+
+section#home input {
+	font-size: 2rem;
+	border: none;
+	border-radius: 8px;
+}
+
+section#home button {
+}
+
+/* section images */
+section#home {
+	background: url('images/petr-sevcovic-594807-unsplash.jpg') no-repeat center center/cover;
+}
+
+section#pricing {
+	background: url('images/blur-chef-close-up-262978.jpg') no-repeat center center/cover;
+}
+
+section#ourteam {
+	background: url('images/pablo-merchan-montes-772142-unsplash.jpg') no-repeat center center/cover;
+}
+
+section#contactus {
+	background: url('images/adult-bar-blur-696218.jpg') no-repeat center center/cover;
 }
 
 .push {
