--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ body {
 }
 
 .navbar {
-	position: fixed;
-	top: 0;
-	z-index: 1;
+	position: fixed !important;
+	top: 0 !important;
+	z-index: 1 !important;
 	display: flex;
 	width: 100%;
 	height: 60px;
@@ -113,6 +113,7 @@ section#menu {
 	width: 100%;
 	height: 100vh;
 	text-align: center;
+	padding: 3.1rem 0;
 }
 
 .menu-table {
@@ -208,6 +209,282 @@ section#menu {
 	}
 }
 
+section#ourteam {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	padding: 3.1rem 0;
+	color: #000;
+	background: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	height: 100vh;
+}
+
+section#ourteam html {
+	font-size: 10px;
+	font-family: 'Roboto', sans-serif;
+}
+
+section#ourteam a {
+	text-decoration: none;
+	color: #fff;
+}
+
+.heading {
+	text-transform: uppercase;
+	font-size: 2.2rem;
+	letter-spacing: 3px;
+	margin-right: -3px;
+	margin-bottom: 1rem;
+	text-align: center;
+	color: #333;
+	position: relative;
+}
+
+.heading::after {
+	content: "";
+	width: 6.2rem;
+	height: .5rem;
+	background-color: orangered;
+	position: absolute;
+	bottom: -1.2rem;
+	left: 50%;
+	transform: translateX(-50%);
+	border-radius: 1.2rem;
+}
+
+.card-wrapper {
+	display: flex;
+	align-items: center;
+	align-content: center;
+	flex-direction: column;
+}
+
+.card {
+	width: 20rem;
+	height: 75vh;
+	background-color: #ebeef8;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin: 1.2rem 0;
+	box-shadow: .3rem .3rem 1.8rem rgba(0, 0, 0, 0.2);
+}
+
+.card .card-img {
+	width: 100%;
+	height: 16.2rem;
+	object-fit: cover;
+	-webkit-clip-path: polygon(0 0, 100% 0, 100% 78%, 0% 100%);
+	clip-path: polygon(0 0, 100% 0, 100% 78%, 0% 100%);
+}
+
+.profile-img {
+	width: 9.3rem;
+	height: 9.3rem;
+	object-fit: cover;
+	border-radius: 50%;
+	margin-top: -6.8rem;
+	z-index: 999;
+	border: .6rem solid #ebeef8;
+}
+
+.card h1 {
+	font-size: 1.5rem;
+	color: #333;
+	margin: .9rem 0;
+}
+
+.job-title {
+	color: #777;
+	font-size: .9rem;
+	font-weight: 300;
+}
+
+.about {
+	font-size: .9rem;
+	margin: .9rem 0;
+	font-style: italic;
+	text-align: center;
+	color: #333;
+}
+
+.card .btn {
+	padding: 0.6rem 1.5rem;
+	background-color: orangered;
+	border-radius: 1.2rem;
+	margin: .6rem 0;
+	text-transform: uppercase;
+	color: orangered;
+	font-size: .8rem;
+	transition: all .5s;
+}
+
+.card .btn:hover {
+	transform: translateY(-2px);
+	box-shadow: .3rem .3rem 1.2rem rgba(0, 0, 0, 0.2);
+}
+
+.card .btn:active {
+	transform: translateY(0);
+	box-shadow: none;
+}
+
+.social-media {
+	width: 100%;
+	list-style: none;
+	display: flex;
+	justify-content: space-evenly;
+	padding: 1.2rem 0;
+	margin-top: .9rem;
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.social-media i {
+	font-size: 1.8rem;
+}
+
+.fa-facebook-square {
+	color: #3b5999;
+}
+
+.fa-twitter-square {
+	color: #55acee;
+}
+
+.fa-instagram {
+	color: #e6683c;
+}
+
+.fa-google-plus-square {
+	color: #dd4b39;
+}
+
+.fa-facebook-square:hover,
+.fa-twitter-square:hover,
+.fa-instagram:hover,
+.fa-google-plus-square:hover {
+	color: #45e19f;
+}
+
+@media screen and (min-width: 700px) {
+	.card-wrapper {
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.card {
+		margin: 1.2rem;
+		transition: opacity .5s;
+	}
+
+	@keyframes fadeIn {
+		from {
+			opacity: 0;
+		}
+		to {
+			opacity: 1;
+		}
+	}
+	.card:nth-child(1) {
+		animation: fadeIn .5s .5s backwards;
+	}
+	.card:nth-child(2) {
+		animation: fadeIn .5s 1s backwards;
+	}
+	.card:nth-child(3) {
+		animation: fadeIn .5s 1.5s backwards;
+	}
+	.card:nth-child(4) {
+		animation: fadeIn .5s 2s backwards;
+	}
+
+	.card:hover {
+		transform: scale(1.05);
+	}
+}
+
+section#contactus {
+	margin: 0;
+	padding: 0;
+	font-family: "montserrat", sans-serif;
+	height: 100vh;
+}
+
+.contact-section {
+	background-size: cover;
+	padding: 65px;
+}
+
+.contact-section h1 {
+	text-align: center;
+	color: #ddd;
+	text-transform: uppercase;
+	font-size: 2.2rem;
+	letter-spacing: 3px;
+	margin-right: -3px;
+	margin-bottom: 1rem;
+	text-align: center;
+	position: relative;
+}
+
+.border {
+	width: 6.2rem;
+	height: .5rem;
+	background: orangered;
+	margin: 40px auto;
+	border-radius: 1.2rem;
+}
+
+.contact-form {
+	max-width: 600px;
+	margin: auto;
+	padding: 0 10px;
+	overflow: hidden;
+}
+
+.contact-form-text {
+	display: block;
+	width: 100%;
+	box-sizing: border-box;
+	margin: 16px 0;
+	border: 0;
+	background: rgba(0, 0, 0, 0.7);
+	padding: 20px 40px;
+	outline: none;
+	color: white;
+	transition: 0.5s;
+	font-size: 1.5rem;
+}
+
+.contact-form-text:focus {
+	box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.7);
+}
+
+textarea.contact-form-text {
+	resize: none;
+	height: 120px;
+}
+
+.contact-form-btn {
+	float: right;
+	border: 0;
+	background: #28ad8cea;
+	color: #fff;
+	padding: 12px 50px;
+	border-radius: 50px;
+	cursor: pointer;
+	transition: 0.5s;
+	font-size: 1rem;
+}
+
+.contact-form-btn:hover {
+	background: #02a345;
+}
 /* section images */
 section#home {
 	background: url('images/petr-sevcovic-594807-unsplash.jpg') no-repeat center center/cover;
